sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:9: error: not found: value aucuneEchange
            swap(i,i+1);aucuneEchange=false
                        ^